<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="tab_record">记录</string>
    <string name="tab_homepage">首页</string>
    <string name="tab_doctor">医生</string>
    <string name="tab_me">我的</string>
    <string name="tab_group">群组</string>
    <string name="none_nickname">匿名</string>
    <string name="user_info_center">个人信息</string>
    <string name="send_captcha">发送验证码</string>
    <string name="improve_user_profile_one_part_one">你好，很高兴认识你。</string>
    <string name="improve_user_profile_one_part_two">请问怎么称呼?</string>
    <string name="jump">跳过</string>
    <string name="improve_user_profile_one">完善信息1/2</string>
    <string name="next_step">下一步</string>
    <string name="nickname">昵称</string>
    <string name="input_nickname">请输入昵称</string>
    <string name="improve_user_profile_two">完善信息2/2</string>
    <string name="improve_user_profile_two_part_one">你的真实姓名是?</string>
    <string name="improve_user_profile_two_part_two">医生可以通过真实姓名匹配你的线下就诊记录，能更好的解答你的问题哦。</string>
    <string name="real_name">真实姓名</string>
    <string name="input_real_name">请输入真实姓名</string>
    <string name="warn_real_name">真实姓名只有医生才能看到</string>
    <string name="complete">完成</string>
    <string name="scan_qr_code">扫描二维码</string>
    <string name="scan_qr_code_warn">扫描二维码，需要授予相机权限，是否授予?</string>
    <string name="scan_qr_code_denied">扫描二维码，授予相机权限失败，请检查该权限是否正确授予，并授予</string>
    <string name="setting">设置</string>
    <string name="martian">火星人</string>
    <string name="current_app_version">应用版本</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="zero_money">0.00</string>
    <string name="re_scan">重新搜索</string>
    <string name="pay">支付</string>
    <string name="pay_money">支付金额</string>
    <string name="yuan">元</string>
    <string name="one">1</string>
    <string name="wechat_pay">微信支付</string>
    <string name="alipay">支付宝支付</string>
    <string name="avatar">头像</string>
    <string name="register_mobile">注册手机</string>
    <string name="take_photo">拍照</string>
    <string name="sd_select_photo_from_gallery">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="pay_cancel">支付取消</string>
    <string name="pay_unknown">未知错误，支付失败</string>
    <string name="pay_invalid">支付异常，未找到支付app</string>
    <string name="create_order_success">支付中，请稍后</string>
    <string name="join_group">进入群组</string>
    <string name="re_pay">重新支付</string>
    <string name="back">返回</string>
    <string name="repay">重新支付</string>
    <string name="str_request_camera_message">请求获取相机权限</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="error_nickname">昵称太简单了，不容易让人记住哦</string>
    <string name="name_error">真实姓名太长或太短，不容易让人记住哦</string>
    <string name="wechat_login">微信登录</string>
    <string name="scan_2_bind_doctor">扫码绑定医生</string>
    <string name="scan_2_doctor_desc">将医生二维码放入框内，可自动扫描</string>
    <string name="opening_wechat">正在打开微信中…</string>
    <string name="no_have_wechat">手机上未安装微信客户端</string>
    <string name="confirm">确定</string>
    <string name="bind">绑定</string>
    <string name="unbind">解绑</string>
    <string name="not_bind_yet">未绑定</string>
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="return_to_today">回到今天</string>
    <string name="return_to_this_week">回到本周</string>
    <string name="sleep_record">睡眠记录</string>
    <string name="sleep_diary">睡眠日记</string>
    <string name="refill">重填</string>
    <string name="record_sleep_duration">睡眠时长</string>
    <string name="fall_asleep_duration">入睡时长</string>
    <string name="doctor_advise">医生建议</string>
    <string name="error">Error</string>
    <string name="empty_response">Empty_response</string>
    <string name="taken_pills">服用药物</string>
    <string name="no_sleep_record_hint">保持良好的记录睡眠日记的习惯，有助于睡眠医生分析您的睡眠情况！</string>
    <string name="go_record">去记录</string>
    <string name="no_record_yet">暂无记录</string>
    <string name="percent_mart">%</string>
    <string name="sleep_efficient">睡眠效率</string>
    <string name="do_not_eat_pills">未服药</string>
    <string name="scale_fill_date">填写日期：yyyy.MM.dd</string>
    <string name="no_doctor_evaluation_hint">医生建议尚未更新，请耐心等待，更新后，我们会在消息中心通知您查看</string>
    <string name="extra_user_info">以上个人信息仅供医生参考，不予公开。</string>
    <string name="logout_failed_please_check_network">退出登录失败，请检查网络</string>
    <string name="operation_warning">操作警告</string>
    <string name="operation_success">操作成功</string>
    <string name="operation_fail">操作失败</string>
    <string name="system_maintain">系统维护</string>
    <string name="system_maintain_desc">系统正在维护中，请稍后重试</string>
    <string name="today_no_record">今日暂无记录</string>
    <string name="today_no_record_hint">您今天还没有填写睡眠日记</string>
    <string name="finished">已完成</string>
    <string name="cbti_ing">CBTI认知行为治疗进行中</string>
    <string name="cbti_ing_describe">建议在开课当天完成本周课程学习，自完成之日起7天后开放下阶段课程。</string>
    <string name="cbti_ing_all_finished_desc">恭喜你完成CBTI课程！希望你能继续保持良好的睡眠卫生习惯，早日告别失眠。</string>
    <string name="current_progress_colon">当前进度：</string>
    <string name="enter_and_learn">进入学习</string>
    <string name="my_sleep_prescription">我的睡眠处方</string>
    <string name="my_sleep_prescription_desc">解读睡眠日记，定制睡眠处方</string>
    <string name="scale_evaluation">量表评估</string>
    <string name="sleep_health">睡眠卫生</string>
    <string name="homepage_sleep_slogan">好的睡眠离不开您一点一滴的努力</string>
    <string name="my_target">我的目标</string>
    <string name="sleep_time">就寝时间</string>
    <string name="getUpTime">起床时间</string>
    <string name="on_bed_duration">卧床时长</string>
    <string name="sleep_duration">睡眠时长</string>
    <string name="night_wake_up_duration">夜醒时长</string>
    <string name="empty_msg_center_msg">没有消息提醒</string>
    <string name="empty_msg_center_desc"><b>您收到医生回复、建议或报告更新，</b>都会在这里收到消息提醒</string>
    <string name="empty_report_msg">暂无电子报告</string>
    <string name="empty_evaluation_msg">暂无测评记录</string>
    <string name="empty_evaluation_desc">了解您的睡眠健康及心理状况</string>
    <string name="empty_404_msg">很抱歉！</string>
    <string name="empty_404_desc">您要访问的页面不存在</string>
    <string name="empty_network_error_msg">网络连接异常</string>
    <string name="empty_network_error_desc">请查看网络设置或稍后重试</string>
    <string name="emtpy_advisory_msg">暂无相关记录</string>
    <string name="emtpy_advisory_desc">绑定医生后，可向主治医生咨询</string>
    <string name="empty_coupon_msg">暂无兑换记录</string>
    <string name="empty_coupon_desc">使用兑换码后，可在此查看兑换记录</string>
    <string name="bind_doctor">绑定医生</string>
    <string name="bind_other_doctor_state">"您已绑定了其他医生，如需换绑请联系客服"</string>
    <string name="doctor_service">医生服务</string>
    <string name="doctor_details_label">详细信息</string>
    <string name="ask_questions">去提问</string>
    <string name="buy_count">购买数量</string>
    <string name="unused">未使用</string>
    <string name="used">已使用</string>
    <string name="my_advisory">我的咨询</string>
    <string name="waiting_for_reply">待回复</string>
    <string name="closed">已关闭</string>
    <string name="first_question">第一次提问</string>
    <string name="second_question">第二次提问</string>
    <string name="third_question">第三次提问</string>
    <string name="view_the_record">查看电子报告</string>
    <string name="sleep_doctor">睡眠医生</string>
    <string name="input_question_hint">请描述您的年龄、性别、且详细描述您的症状及就诊经历，便于医生准确分析，我们会保证您的隐私安全。</string>
    <string name="select_report">选择报告</string>
    <string name="take_picture">您上传的附件仅对您的医生可见，最多可上传9张</string>
    <string name="more_than_ten_size">最少要10个字</string>
    <string name="continue_ask_question">继续咨询</string>
    <string name="gender">性别</string>
    <string name="none_edit">未填写</string>
    <string name="birthday">出生日期</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="edu_level">教育程度</string>
    <string name="career">职业</string>
    <string name="ethnicity">民族</string>
    <string name="is_using_sleep_pills">当前是否服用促进睡眠类药物？</string>
    <string name="input_career_hint">请填写您所从事的职业</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="sure">确定</string>
    <string name="lesson_progress_title">课程进度</string>
    <string name="course">课程</string>
    <string name="practice">练习</string>
    <string name="review">复习</string>
    <string name="message_board">留言</string>
    <string name="learn">学习</string>
    <string name="lesson_practice">课程练习</string>
    <string name="lesson_list">课程表</string>
    <string name="the_week_lesson_summary">本周总结</string>
    <string name="lesson_summary">课程总结</string>
    <string name="lesson_review_last_week">上周回顾</string>
    <string name="see_lesson_2_unlock">观看课程后解锁</string>
    <string name="finished_pre_lesson_2_unlock">完成上节课程后解锁</string>
    <string name="none_market">"您的手机没有安装应用市场!"</string>
    <string name="soft_upgrade">应用版本</string>
    <string name="version_upgrade">版本更新</string>
    <string name="current_version">当前版本号:</string>
    <string name="new_version">最新版本号:</string>
    <string name="go_to_experience">立即体验</string>
    <string name="version_upgrade_title">新版本更新啦～</string>
    <string name="this_is_last_version">当前已是最新版本</string>
    <string name="have_a_new_version">有新版本，请立即体验吧</string>
    <string name="force_upgrade_version">当前版本太低，请到应用市场升级后再使用</string>
    <string name="practice_dialog_title">下节课程待开放</string>
    <string name="open_notification">开启通知</string>
    <string name="open_notification_and_receive_doctor_response">开启通知，及时获取医生回复</string>
    <string name="record_weekly_report">周报告</string>
    <string name="my_evaluation">量表评估</string>
    <string name="electric_report">电子报告</string>
    <string name="wechat_bind">微信绑定</string>
    <string name="unbind_success">解绑成功</string>
    <string name="bind_wechat_title">是否绑定微信？</string>
    <string name="unbind_wechat_title">确定解绑微信？</string>
    <string name="bind_wechat_message">绑定后，可使用微信账号登录睡眠医生</string>
    <string name="unbind_wechat_message">解绑后，你将无法使用微信账号登录</string>
    <string name="me_my_sleep_file">睡眠档案</string>
    <string name="online_report_list_empty_title">暂无测评记录</string>
    <string name="online_report_list_empty_desc">了解您的睡眠健康及心理状况</string>
    <string name="input_captcha_hint">请输入验证码</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用此账号</string>
    <string name="tab_data">数据</string>
    <string name="please_turn_on_bluetooth_adapter">请打开手机蓝牙，与监测仪进行连接。</string>
    <string name="re_scan_u"><u>重新搜索</u></string>
    <string name="scan_error_one">①  按下监测仪按键查看是否已开机，如未开机，请连接电源，充电开启监测仪；</string>
    <string name="scan_error_two">②  检查监测仪是否已与其它手机连接。如有，请解绑后重新尝试连接；</string>
    <string name="scan_error_three">③  确保监测仪与手机距离保持在5米内，去除墙壁、厚物遮挡等信号干扰因素；</string>
    <string name="scan_error_four">④  关闭手机蓝牙重试。</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="captcha_already_sent">%ds</string>
    <string name="validate_phone_number">验证手机</string>
    <string name="phone_number_validation_regex" tools:ignore="TypographyDashes">1([0-9]{10})</string>
    <string name="captcha_validation_regex">\\d{6}</string>
    <string name="service_is_canceled">服务已取消</string>
    <string name="any_question_ask_kefu">如有疑问，请咨询客服</string>
    <string name="relate_service_is_canceled">相关服务已取消</string>
    <string name="relax_exercise">放松训练</string>
    <string name="bluetooth_not_enable">手机蓝牙未开启</string>
    <string name="is_not_this_device">不是这台设备？</string>
    <string name="search_more_u"><u>搜索更多</u></string>
    <string name="confirm_bind">确认绑定</string>
    <string name="do_not_see_your_device">没看到您的设备？</string>
    <string name="open_bluetooth">开启蓝牙</string>
    <string name="anxiety_and_belief">情绪记录</string>
</resources>