<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".buz.account.login.ValidatePhoneNumberActivity">

    <com.sumian.common.widget.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/validate_phone_number" />

    <com.sumian.sd.buz.account.login.SumianEditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_36"
        android:layout_marginTop="@dimen/space_36"
        android:layout_marginEnd="@dimen/space_36"
        app:set_hint="@string/input_phone_hint"
        app:set_input_type="number"
        app:set_validation_regex="@string/phone_number_validation_regex" />

    <LinearLayout
        android:id="@+id/ll_captcha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_36"
        android:layout_marginTop="@dimen/space_30"
        android:layout_marginEnd="@dimen/space_36"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="visible"
        tools:visibility="visible">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1">

            <com.sumian.sd.buz.account.login.SumianEditText
                android:id="@+id/et_captcha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:set_hint="@string/input_captcha_hint"
                app:set_input_type="number"
                app:set_validation_regex="@string/captcha_validation_regex" />

            <ImageView
                android:id="@+id/iv_captcha_clear"
                style="@style/EditTextClearIv"
                android:contentDescription="@null" />
        </FrameLayout>

        <com.sumian.sd.widget.CountDownTextView
            android:id="@+id/tv_send_captcha"
            style="@style/SumianButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="6dp"
            app:cdtv_count_down_text="@string/captcha_already_sent"
            app:cdtv_normal_text="@string/send_captcha" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/SumianButton"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/space_36"
        android:layout_marginTop="@dimen/space_40"
        android:layout_marginEnd="@dimen/space_36"
        android:text="@string/next_step" />
</LinearLayout>