<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_scan_permission_detail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/b5_color"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:text="未获得完整授权，点击查看详情"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="7dp"
            android:layout_height="12dp"
            android:layout_gravity="center|right"
            android:src="@drawable/ic_arrow_right_light_blue"
            android:tint="@color/white" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_t3_16"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:text="@string/open_bluetooth"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_sub_title"
        style="@style/text_t2_14"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/please_turn_on_bluetooth_adapter" />

    <View
        style="@style/HorizontalDividerLineMarginStart20L3"
        android:layout_marginTop="20dp"
        android:background="@color/light_line_bg_color" />

    <LinearLayout
        android:id="@+id/vg_no_device"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        tools:visibility="gone">

        <TextView
            style="@style/text_t1_16"
            android:layout_marginTop="40dp"
            android:text="@string/scan_error_one" />

        <TextView
            style="@style/text_t1_16"
            android:layout_marginTop="40dp"
            android:text="@string/scan_error_two" />

        <TextView
            style="@style/text_t1_16"
            android:layout_marginTop="40dp"
            android:text="@string/scan_error_three" />

        <TextView
            style="@style/text_t1_16"
            android:layout_marginTop="40dp"
            android:text="@string/scan_error_four" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_re_scan"
            style="@style/SumianButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="70dp"
            android:text="@string/re_scan" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_bt_not_enable"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/iv_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:src="@drawable/ic_equip_icon_bluetooth" />

        <TextView
            style="@style/text_t2_14"
            android:layout_marginTop="20dp"
            android:text="@string/bluetooth_not_enable" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_scan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="60dp">

                <com.sumian.sd.widget.ripple.RippleScanningView
                    android:id="@+id/ripple_view"
                    android:layout_width="@dimen/space_200"
                    android:layout_height="@dimen/space_200"
                    android:layout_gravity="center"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/iv_device"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_equip_icon_monitor"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_confirm"
                style="@style/SumianButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/confirm_bind"
                android:visibility="invisible"
                tools:visibility="visible" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/vg_scan_more_tvs"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                style="@style/text_t2_13"
                android:text="@string/is_not_this_device" />

            <TextView
                android:id="@+id/tv_scan_more"
                style="@style/text_t2_13"
                android:text="@string/search_more_u"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vg_device_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            tools:visibility="visible">

            <TextView
                style="@style/text_t2_13"
                android:text="@string/do_not_see_your_device" />

            <TextView
                android:id="@+id/tv_rescan"
                style="@style/text_t2_13"
                android:text="@string/re_scan_u"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>