<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/white"
    android:gravity="center_vertical"
    android:paddingStart="@dimen/space_3"
    android:paddingEnd="@dimen/space_3">

    <TextView
        android:id="@+id/tv_relaxation"
        style="@style/text_t1_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/home_icon_relaxation"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/relax_exercise" />

    <TextView
        android:id="@+id/tv_scale"
        style="@style/text_t1_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/home_icon_scale"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/scale_evaluation" />

    <TextView
        android:id="@+id/tv_sleep_health"
        style="@style/text_t1_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/home_icon_sleephygiene"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/sleep_health" />


    <TextView
        android:id="@+id/tv_anxious_and_faith"
        style="@style/text_t1_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/home_icon_anxietybelief"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/anxiety_and_belief" />
</LinearLayout>