<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black_40"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hw_colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_60">

                <TextView
                    android:layout_marginStart="20dp"
                    android:id="@+id/tv_go_to_today"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:text="@string/return_to_today"
                    android:textColor="@color/b3_color"
                    android:textSize="@dimen/font_14"
                    tools:ignore="RelativeOverlap" />

                <TextView
                    android:id="@+id/tv_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:textColor="@color/t2_color"
                    android:textSize="@dimen/font_14"
                    tools:text="2018.05.01" />

                <TextView
                    android:id="@+id/tv_read_all"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/space_20"
                    android:gravity="center"
                    android:text="全部已读"
                    android:textColor="@color/b3_color"
                    android:textSize="@dimen/font_14"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/iv_left"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/space_20"
                    android:layout_toStartOf="@id/tv_month"
                    android:contentDescription="@null"
                    android:padding="@dimen/space_10"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_record_icon_left" />


                <ImageView
                    android:id="@+id/iv_right"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/space_20"
                    android:layout_toEndOf="@id/tv_month"
                    android:contentDescription="@null"
                    android:padding="@dimen/space_10"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_record_icon_right"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_50"
                android:paddingLeft="@dimen/space_12"
                android:paddingRight="@dimen/space_12">

                <TextView
                    style="@style/CalendarDateText"
                    android:text="@string/sun" />

                <TextView
                    style="@style/CalendarDateText"
                    android:text="@string/mon" />

                <TextView
                    style="@style/CalendarDateText"
                    android:text="@string/tue" />

                <TextView
                    style="@style/CalendarDateText"
                    android:text="@string/wed" />

                <TextView
                    style="@style/CalendarDateText"
                    android:text="@string/thu" />

                <TextView
                    style="@style/CalendarDateText"
                    android:text="@string/fri" />

                <TextView
                    style="@style/CalendarDateText"
                    android:text="@string/sat" />
            </LinearLayout>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/calender_view_pager"
            android:layout_width="match_parent"
            android:layout_height="326dp" />
    </LinearLayout>

    <View
        android:id="@+id/v_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>