<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/b1_color"
    android:orientation="vertical">

    <TextView
        style="@style/ButtonSheetItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_80"
        android:text="@string/logout_hint"
        android:textSize="@dimen/font_14" />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/ButtonSheetItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:paddingBottom="@dimen/space_20"
        android:paddingTop="@dimen/space_20"
        android:text="@string/logout"
        android:textColor="@color/t4_color"
        android:textSize="@dimen/font_16" />

    <View style="@style/HorizontalDividerLine" />

    <TextView
        android:id="@+id/tv_cancel"
        style="@style/ButtonSheetItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/space_20"
        android:paddingTop="@dimen/space_20"
        android:text="@string/cancel"
        android:textSize="@dimen/font_16" />

</LinearLayout>